# mindmapvault-foss

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  weekpoint-check-0.3.25.md
.github/: copilot-instructions.md
.github/workflows/: desktop-build.yml  offline-parity.yml
demo/: README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
demo/public/: CREDITS.md
demo/src/: App.tsx  main.tsx  playground.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  local_store.rs  main.rs
docs/: LOCAL_STORAGE_AND_PROFILES.md  PROJECT_STRUCTURE_AND_BUILD.md
docs/demo/: index.html
docs/demo/assets/: a-arrow-down-D4hHl7pP.js  a-arrow-down-DJLoY4Km.js  a-arrow-up-C8YvbaAc.js  a-arrow-up-CfhFHreE.js  a-arrow-up-D24BYygu.js  a-large-small-B6Ifp2Eq.js  a-large-small-BbcSVEd8.js  accessibility-BRgvYry_.js  accessibility-D54yfMCZ.js  accessibility-DLDy2-_V.js  activity-B1MVy6bh.js  activity-BRpxrVZG.js  activity-Bid9_whx.js  air-vent-Ctvep2i0.js  air-vent-DnwQUvbJ.js  airplay-B0jBq7UJ.js  airplay-BoKauOcY.js  airplay-rqd6pkd6.js  alarm-clock-Ba-DMfwf.js  (+4229 more)
frontend_app/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend_app/src/: App.tsx  index.css  types.ts
notes/: copilot-instructions.md
scripts/: check_foss_saas_residue.mjs  check_frontend_offline_parity.mjs  prepare-oss-build.js  restore-oss-build.js  sync-to-wsl-home-and-run.sh  test-workflow.ps1  test-workflow.sh  version-check.js
(+36 files in other folders)
